# cmake_example

./: .gitignore  CMakeLists.txt
cmake/: print.cmake  variables.cmake
cmake/module/: Findgtest.cmake  Findjson.cmake
src/: main.cc
sum/: CMakeLists.txt
